@@ -45,6 +45,7 @@ public interface LandTitle extends PrivateProperty
 	 * @return the roomID or the Area  name of the property for sale
 	 */
 	public String landPropertyID();
+	
 	/**
 	 * Set the roomID or the Area name of the property for sale
 	 * @param landID the roomID or the Area  name of the property for sale
@@ -58,6 +59,7 @@ public interface LandTitle extends PrivateProperty
 	 * @see LandTitle#updateTitle()
 	 */
 	public void updateLot(List<String> optPlayerList);
+	
 	/**
 	 * Simply resaves the rooms represented by this title to reflect change
 	 * in ownership or price.  The state of the rooms is not inspected or
@@ -72,12 +74,14 @@ public interface LandTitle extends PrivateProperty
 	 * @return a list of the complete set of Room objects represented by this title
 	 */
 	public List<Room> getAllTitledRooms();
+	
 	/**
 	 * The complete set of room objects that are tied together by one or more titles.
 	 * @see com.planet_ink.coffee_mud.Locales.interfaces.Room
 	 * @return a list of the complete set of Room objects represented by property
 	 */
 	public List<Room> getConnectedPropertyRooms();
+
 	/**
 	 * Returns a unique identifier corresponding to getConnectedPropertyRooms.
 	 * An identifier that uniquely identifies all the connected lots of this property,
@@ -86,22 +90,26 @@ public interface LandTitle extends PrivateProperty
 	 * @return unique identifier
 	 */
 	public String getUniqueLotID();
+
 	/**
 	 * Whether this property is a rental.
 	 * @return true if the property is rental, false if ownable outright
 	 */
 	public boolean rentalProperty();
+
 	/**
 	 * Sets whether this property is a rental.
 	 * @param truefalse true if the property is rental, false if ownable outright
 	 */
 	public void setRentalProperty(boolean truefalse);
+	
 	/**
 	 * If back taxes is owned on this property, this is how the value is set.  The
 	 * value should be in base coffeemud currency
 	 * @param amount the back  taxes owed
 	 */
 	public void setBackTaxes(int amount);
+
 	/**
 	 * If back taxes is owned on this property, this is how the value is retreived.  The
 	 * value should be in base coffeemud currency
@@ -123,4 +131,19 @@ public interface LandTitle extends PrivateProperty
 	 * @return true if expansion is OK, false otherwise
 	 */
 	public boolean allowsExpansionConstruction();
+
+	/**
+	 * Returns whether this title creates connected walls between new rooms as if the rooms
+	 * were laid out in a grid.
+	 * @return true if the rooms can lay out as a grid, false otherwise
+	 */
+	public boolean gridLayout();
+
+	/**
+	 * Sets whether this title creates connected walls between new rooms as if the rooms
+	 * were laid out in a grid.
+	 * @param gridLayout true if the rooms can lay out as a grid, false otherwise
+	 */
+	public void setGridLayout(boolean gridLayout);
+
 }
