@@ -694,9 +694,11 @@ ANYWAY.
 PROP_LOTSFORSALE=\
 Property   : Prop_LotsForSale\n\r\
 Targets    : Room\n\r\
-Parameters : (RENTAL) Price of each room on the lot\n\r\
+Parameters : ([OWNER NAME]/)(RENTAL) (GRID) Price of each room on the lot\n\r\
 Example    : 1000000\n\r\
+Example    : GRID 1000000\n\r\
 Example    : Bob/100000\n\r\
+Example    : Bob/ RENTAL 100000\n\r\
 Description: \n\r\
 Makes this room and future adjacent rooms available for purchase.  \
 This property is an extension of the Prop_RoomForSale property, and \
@@ -704,10 +706,11 @@ includes all of its capabilities, PLUS, when this room is sold, \
 adjacent lots will automatically be created and put up for sale, \
 allowing the player to expand his or her property.  When the properties \
 are sold, or fall back out of any players possession, the system will \
-automatically retract the created rooms. The word rental followed by a space may \
+automatically retract the created rooms. The word RENTAL followed by a space may \
 preceed the price to make the price of the property be charged every month \
 automatically out of a Bankers account.  Failure to make rent returns the property \
-to sellable status.\n\r\
+to sellable status.  The word GRID followed by a space may preceed the price \
+to make new rooms automatically link to other rooms via demolishable walls.\n\r\
 \n\r\
 When property is sold, it will be listed as the owner with a slash and the price.  \
 Entering this sort of parameter directly is the quick way to give players or clans property. \n\r\
@@ -1436,9 +1439,11 @@ their property.
 PROP_ROOMPLUSFORSALE=\
 Property   : Prop_RoomsPlusForSale\n\r\
 Targets    : Room\n\r\
-Parameters : (RENTAL) Price of the first room\n\r\
+Parameters : ([OWNER NAME]/)(RENTAL) (GRID) Price of the first room\n\r\
 Example    : 1000000\n\r\
+Example    : GRID 1000000\n\r\
 Example    : The Bob Clan/1000000\n\r\
+Example    : The Bob Clan/RENTAL 1000000\n\r\
 Description: \n\r\
 Makes this room available for purchase by a player.  If you have more than one \
 room for sale, they MUST be separated by at least one room which is \
