@@ -14,6 +14,7 @@
   13. ID on private property will now show size and features, as will VIEW of titles on shopkeepers.
   14. Scripting trigger matches P syntax now truly is Precise (noteable bug fix).
   15. Conquerable will now transfer private property to conqueror, see new OWNERSHIP flag.
+  16. Prop_Lot*ForSale and Prop_RoomPlus now support grid-connecting the walls of rooms for looping.
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
    2. Prop_ItemBinder can now bind to a group.
